fix layout problems

--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -1,9 +1,8 @@
 .sidebar {
-  height: 100vh;
-  // margin-top: 60px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  height: 100%;
 }
 .createRoom {
   display: flex;
