--- a/client/src/components/Sidebar/UserItem/UserItem.module.scss
+++ b/client/src/components/Sidebar/UserItem/UserItem.module.scss
@@ -1,4 +1,5 @@
 .user {
+  display: block;
   padding: 10px;
   margin: 0 5px 5px;
   background: white;
